# XRPL-DEX-API

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: main.rs
src/client/: methods.rs
src/models/: mod.rs  normalized_offer.rs
