[package]
name = "xrpl_dex_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10" }
tokio = { version = "1.19.1", features = ["full"] }
warp = { version = "0.3.2" }
serde = "1.0.137"
serde_json = "1.0.81"
uuid = "1.1.1"
