[package]
name = "xrpl_dex_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10" }
websocket = "0.26.4"
tokio = { version = "1.19.2", features = ["full"] }
warp = { version = "0.3.2" }
serde = "1.0.137"
serde_json = "1.0.81"
uuid = "1.1.1"
tungstenite = "0.17.2"
futures-channel = "0.3.21"
tokio-tungstenite = "0.17.1"
ws = "0.9.2"
env_logger = "0.9.0"
futures = "0.3"
futures-util = "0.3.21"
url = "2.2.2"
